--- a/Home.css
+++ b/Home.css
@@ -136,7 +136,7 @@ header nav ul li .caret {
 	}
 
 	header nav ul li {
-		display: grid;
+		display: block;
 		border-bottom:1px solid rgba(255,255,255,.5);
 	}
 
