--- a/Home.css
+++ b/Home.css
@@ -112,7 +112,7 @@ header nav ul li .caret {
 	}
 
 	.menu_bar .bt-menu {
-		display: block;
+		display: grid;
 		padding: 20px;
 		color: #fff;
 		overflow: hidden;
@@ -141,7 +141,7 @@ header nav ul li .caret {
 	}
 
 	header nav ul li a {
-		display:block;
+		display:grid;
 	}
 
 	/*header nav ul li:hover .children {
