--- a/Home.css
+++ b/Home.css
@@ -130,7 +130,8 @@ header nav ul li .caret {
 		width: 80%;
 		height: calc(100% - 80px);
 		position: fixed;
-		right:100%;
+		/*right:100%;*/
+		left:0
 		margin: 0;
 		overflow: scroll;
 	}
@@ -141,7 +142,7 @@ header nav ul li .caret {
 	}
 
 	header nav ul li a {
-		display:grid;
+		display:block;/*grid*/
 	}
 
 	/*header nav ul li:hover .children {
