--- a/Home.css
+++ b/Home.css
@@ -145,8 +145,8 @@ header nav ul li .caret {
 		display:block;/*grid*/
 	}
 
-	/*header nav ul li:hover .children {
-		display: none;*/
+	header nav ul li:hover .children {
+		display: none;
 	
 
 	header nav ul li .children {
