--- a/Home.css
+++ b/Home.css
@@ -130,8 +130,8 @@ header nav ul li .caret {
 		width: 80%;
 		height: calc(100% - 80px);
 		position: fixed;
-		/*right:100%;*/
-		left:0
+		right:100%;
+		/*left:0*/
 		margin: 0;
 		overflow: scroll;
 	}
