--- a/Home.css
+++ b/Home.css
@@ -308,8 +308,8 @@ header nav ul li .caret {
     background-position: center;
     background-size: center;
     background-repeat: no-repeat;
-    /*width: 100%;
-    padding: 20px;*/
+    max-width: 100%;
+    /*padding: 20px;*/
 }
 /* Footer */
 .footer {
@@ -323,8 +323,8 @@ header nav ul li .caret {
     background-image:url(amf1-logo-2021.jpg);
     background-size: 100px auto;
     background-repeat:repeat-x;
-    /*width: 100%;
-    padding: 20px;*/
+    max-width: 100%;
+    /*padding: 20px;*/
 }
 
 /* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
