--- a/Home.css
+++ b/Home.css
@@ -309,7 +309,7 @@ header nav ul li .caret {
     background-size: center;
     background-repeat: no-repeat;
     max-width: 100%;
-    /*padding: 20px;*/
+    padding: 20px;
 }
 /* Footer */
 .footer {
@@ -324,7 +324,7 @@ header nav ul li .caret {
     background-size: 100px auto;
     background-repeat:repeat-x;
     max-width: 100%;
-    /*padding: 20px;*/
+    padding: 20px;
 }
 
 /* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
